# vox-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONVENTIONAL_COMMITS.md  CONVENTIONAL_MIGRATIONS.md  LICENSE  QUICKSTART_CODEREVIEW.md  README.md  SECURITY.md  cliff.toml  index.html  main.py  pyproject.toml  requirements-gatekeep.txt  requirements.txt  resumo_das_modificacoes.md  startup_patch.py  vox_ai.py
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: changelog_dev.yml  code-review.yml  deploy_db.yml  deploy_hugging_face.yml  deploy_pages.yml  manual_release.yml  production_pipeline.yml  push_homo.yml  security_review.yml  versioning_dev.yml
.streamlit/: config.toml
data/prompts/: system_prompt.py  ui_content.py
docs/: ARCHITECTURE.md  ASSETS.md  CODE_REVIEW.md  CONVENTIONAL_COMMITS.md  CONVENTIONAL_MIGRATIONS.md
examples/: code_review_example.py
gatekeep/: __init__.py  ai_review.py  colors.py  config_gatekeep.py  config_loader.py  db_check.py  git_utils.py  logger.py  requirements-gatekeep.txt  secrets_check.py  security_check.py  validate_commit_msg.py
pages/: config.js  dashboard.css  dashboard.js
scripts/: gerar_embedding.py  install_hooks.py  security_check.py  utilitario.py
src/: config.py  external_links.py  utils.py
src/app/: chat.py  (+1 more)
supabase/: .gitignore  supabase_migration_auto.bat
tests/: conftest.py  test_code_reviewer.py  test_functions_database.py  test_gemini.py  testa_conexao.py
(+50 files in other folders)
