[project]
name = "vox-ai"
version = "3.2.0"
description = "Vox AI: Assistente de apoio e informação LGBTQIA+ com Inteligência Artificial"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.57.0",
    "gtts>=2.5.4",
    "python-dotenv>=1.2.1",
    "streamlit>=1.40.0",
    "supabase>=2.27.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
